--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -420,12 +420,12 @@ jmespath==0.10.0 # LEVEL_01 # JSON Matching Expressions
 #
 # Sphinx
 #
-pydata-sphinx-theme==0.7.1 # LEVEL_04 # Bootstrap-based Sphinx theme from the PyData community
+pydata-sphinx-theme==0.7.2 # LEVEL_04 # Bootstrap-based Sphinx theme from the PyData community
 sphinx-autobuild==2021.3.14 # LEVEL_04 # Rebuild Sphinx documentation on changes, with live-reload in the browser
 sphinx-rtd-theme==1.0.0 # LEVEL_04 # Read the Docs theme for Sphinx
 sphinx-panels==0.6.0 # LEVEL_04 # A sphinx extension for creating panels in a grid layout
 sphinx-autodoc-typehints==1.12.0 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
-Sphinx==4.2.0 # LEVEL_03 # Python documentation generator
+Sphinx==4.3.0 # LEVEL_03 # Python documentation generator
 sphinx-markdown-tables==0.0.15 # LEVEL_02 # A Sphinx extension for rendering tables written in markdown
 sphinxcontrib-applehelp==1.0.2 # LEVEL_01 # sphinxcontrib-applehelp is a sphinx extension which outputs Apple help books
 sphinxcontrib-devhelp==1.0.2 # LEVEL_01 # sphinxcontrib-devhelp is a sphinx extension which outputs Devhelp document
@@ -446,6 +446,7 @@ twint==2.1.20 # LEVEL_05 # Twitter downloader # An advanced Twitter scraping & O
 #
 cloudscraper==1.2.58 # LEVEL_04 # A Python module to bypass Cloudflare's anti-bot page
 beautifulsoup4==4.10.0 # LEVEL_02 # Screen-scraping library
+soupsieve==2.3.1 # LEVEL_01 # A modern CSS selector implementation for Beautiful Soup
 libclang==12.0.0 # LEVEL_01 # Clang Python Bindings, mirrored from the official LLVM repo: https://github.com/llvm/llvm-project/tree/main/clang/bindings/python, to make the installation process easier
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?) # A thread-safe disk based persistent queue in Python
 colorama==0.4.4 # LEVEL_01 # Cross-platform colored terminal text
@@ -488,7 +489,7 @@ pycocotools==2.0.2 # LEVEL_04 # Official APIs for the MS-COCO dataset
 #
 aenum==3.1.3 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
 aiohttp==3.8.0 # LEVEL_03 # Async http client/server framework (asyncio)
-async-timeout==4.0.0 # LEVEL_02 # Timeout context manager for asyncio programs
+async-timeout==4.0.1 # LEVEL_02 # Timeout context manager for asyncio programs
 aioredis==2.0.0 # 1.3.1 # LEVEL_03 # asyncio (PEP 3156) Redis support
 altgraph==0.17.2 # LEVEL_01 # Python graph (network) package
 ansi2html==1.6.0 # LEVEL_01
@@ -515,7 +516,7 @@ click==8.0.3 # LEVEL_01 # Composable command line interface toolkit
 cloudpickle==2.0.0 # LEVEL_01 # Extended pickling support for Python objects
 codemod==1.0.0 # LEVEL_01 # Codemod is a tool/library to assist you with large-scale codebase refactors that can be partially automated but still require human oversight and occasional intervention. Codemod was developed at Facebook and released as open source
 commonmark==0.9.1 # LEVEL_01 # Python parser for the CommonMark Markdown spec
-coverage==6.1.1 # LEVEL_01 # Code coverage measurement for Python
+coverage==6.1.2 # LEVEL_01 # Code coverage measurement for Python
 croniter==1.0.15 # LEVEL_03 # croniter provides iteration for datetime object with cron like format
 cycler==0.11.0 # LEVEL_01 # Composable style cycles
 cymem==2.0.6 # LEVEL_01 # Manage calls to calloc/free through Cython
@@ -526,7 +527,7 @@ deprecation==2.1.0 # LEVEL_03 # A library to handle automated deprecations
 dill==0.3.4 # LEVEL_01 # serialize all of python
 dm-tree==0.1.6 # LEVEL_02 # Tree is a library for working with nested data structures
 dnspython==2.1.0 # LEVEL_01 # DNS toolkit
-elasticsearch==7.15.1 # LEVEL_02 # Python client for Elasticsearch
+elasticsearch==7.15.2 # LEVEL_02 # Python client for Elasticsearch
 email-validator==1.1.3 # LEVEL_02 # A robust email syntax and deliverability validation library for Python 2.x/3.x
 entrypoints==0.3 # LEVEL_01 # Discover and load entry points from installed packages
 ephem==4.1 # LEVEL_01 # Compute positions of the planets and stars
@@ -603,7 +604,7 @@ pyasn1-modules==0.2.8 # LEVEL_02 # A collection of ASN.1-based protocols modules
 pycares==4.1.2 # LEVEL_03 # Python interface for c-ares
 pycparser==2.21 # LEVEL_01 # C parser in Python
 pydantic==1.8.2 # LEVEL_02 # Data validation and settings management using python 3.6 type hinting
-pyinstaller==4.6 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
+pyinstaller==4.7 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
 pyinstaller-hooks-contrib==2021.3 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
 pyluach==1.3.0 # LEVEL_01 # Pyluach is a Python package for manipulating Hebrew dates,                     Gregorian-Hebrew calendar conversions, getting the weekly                     parsha, and other Jewish calendar related calculations
 PyMeeus==0.5.11 # LEVEL_01 # Python implementation of Jean Meeus astronomical routines
@@ -617,7 +618,7 @@ PyWavelets==1.2.0 # LEVEL_02 # PyWavelets, wavelet transform module
 PyYAML==6.0 # LEVEL_01 # YAML parser and emitter for Python
 pyzmq==22.3.0 # LEVEL_01 # Python bindings for 0MQ
 qcore==1.7.0 # LEVEL_02 # Quora's core utility library
-regex==2021.11.9 # LEVEL_01 # Alternative regular expression module, to replace re
+regex==2021.11.10 # LEVEL_01 # Alternative regular expression module, to replace re
 requests==2.26.0 # LEVEL_02 # Python HTTP for Humans
 requests-cache==0.8.1 # LEVEL_03 # A transparent persistent cache for the requests library
 requests-oauthlib==1.3.0 # LEVEL_03 # OAuthlib authentication support for Requests
@@ -635,7 +636,6 @@ setuptools-git==1.2 # LEVEL_01 # Setuptools revision control system plugin for G
 simpervisor==0.4 # LEVEL_01 # Simple async process supervisor
 sniffio==1.2.0 # LEVEL_01 # Sniff out which async library your code is running under
 sortedcontainers==2.4.0 # LEVEL_01 # Sorted Containers -- Sorted List, Sorted Dict, Sorted Set
-soupsieve==2.3 # LEVEL_01 # A modern CSS selector implementation for Beautiful Soup
 srsly==2.4.2 # LEVEL_02 # Modern high-performance serialization utilities for Python
 statsmodels==0.13.0 # LEVEL_04 # Statistical computations and models for Python
 stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-9)
@@ -653,7 +653,7 @@ tomlkit==0.7.2 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
 tqdm==4.62.3 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
-typed-ast==1.4.3 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
+typed-ast==1.5.0 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typeguard==2.13.0 # LEVEL_01 # Run-time type checker for Python
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typeshed-client==1.1.2 # LEVEL_03 # A library for accessing stubs in typeshed
@@ -695,7 +695,7 @@ mock==4.0.3 # LEVEL_01 # Rolling backport of unittest.mock for all Pythons
 outcome==1.1.0 # LEVEL_02 # Capture the outcome of Python function calls
 pluggy==1.0.0 # LEVEL_01 # plugin and hook calling mechanisms for python
 py==1.11.0 # LEVEL_01 # library with cross-python path, ini-parsing, io, code, log facilities
-psycopg2-binary==2.9.1 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapter
+psycopg2-binary==2.9.2 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapter
 pyOpenSSL==21.0.0 # LEVEL_04 # Python wrapper module around the OpenSSL library
 redis==3.5.3 # LEVEL_01 # Python client for Redis key-value store
 snowballstemmer==2.1.0 # LEVEL_01 # This package provides 29 stemmers for 28 languages generated from Snowball algorithms
@@ -713,7 +713,7 @@ gitdb==4.0.9 # LEVEL_02 # Git Object Database
 #
 #
 jqdatasdk==1.8.10 # LEVEL_04 # jqdatasdk<easy utility for getting financial market data of China>
-SQLAlchemy== 1.4.26 # LEVEL_02 # Database Abstraction Library
+SQLAlchemy== 1.4.27 # LEVEL_02 # Database Abstraction Library
 thriftpy2==0.4.14 # LEVEL_02 # Pure python implementation of Apache Thrift
 ply==3.11 # LEVEL_01 # Python Lex & Yacc
 #
@@ -786,7 +786,7 @@ gunicorn==20.1.0 # LEVEL_02 # WSGI HTTP Server for UNIX
 #
 icu==0.0.1 # LEVEL_01 # Integrated Cognitive User Assistance
 #
-imagecodecs==2021.8.26 # LEVEL_02 # Image transformation, compression, and decompression codecs
+imagecodecs==2021.11.11 # LEVEL_02 # Image transformation, compression, and decompression codecs
 imagecodecs-lite==2020.1.31 # LEVEL_03 # The imagecodecs-lite package is deprecated. Use the imagecodecs package instead
 #
 krb5==0.2.0 # LEVEL_01 # Kerberos API bindings for Python
@@ -804,7 +804,7 @@ Rtree==0.9.7 # LEVEL_01 # R-Tree spatial index for Python GIS
 cypari==2.4.1 # LEVEL_02 # Sage's PARI extension, modified to stand alone
 FXrays==1.3.5 # LEVEL_01 # Computes extremal rays with filtering
 knot-floer-homology==1.1 # LEVEL_01 # Python wrapper for Zoltán Szabó's HFK Calculator
-plink==2.4 # LEVEL_01 # A full featured Tk-based knot and link editor
+plink==2.4.1 # LEVEL_01 # A full featured Tk-based knot and link editor
 pypng==0.0.21 # LEVEL_01 # Pure Python library for saving and loading PNG images
 #
 rapids==0.0.1 # LEVEL_05 # REST APIs documented and sensible
@@ -873,12 +873,11 @@ yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
 einops==0.3.2 # LEVEL_01 # A new flavour of deep learning operations
 configparser==5.1.0 # LEVEL_01 # Updated configparser from Python 3.8 for Python 2.6+
 pathtools==0.1.2 # LEVEL_01 # File system general utilities
-shortuuid==1.0.7 # LEVEL_01 # A generator library for concise, unambiguous and URL-safe UUIDs
+shortuuid==1.0.8 # LEVEL_01 # A generator library for concise, unambiguous and URL-safe UUIDs
 subprocess32==3.5.4 # LEVEL_01 # A backport of the subprocess module from Python 3 for use on 2.x
 #
 recommonmark==0.7.1 # LEVEL_04 # A docutils-compatibility bridge to CommonMark, enabling you to write CommonMark inside of Docutils & Sphinx projects
 livereload==2.6.3 # LEVEL_02 # Python LiveReload is an awesome tool for web developers
 #
-langcodes==3.2.1 # LEVEL_01 # Labels and compares human languages in a standardized way
-#
+langcodes==3.3.0 # LEVEL_01 # Tools for labeling human languages with IETF language tags
 kiwisolver==1.3.2 # LEVEL_01 # A fast implementation of the Cassowary constraint solver
