--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -159,7 +159,9 @@ torchaudio==0.10.0 # LEVEL_03 # An audio package for PyTorch
 torchvision==0.11.1 # LEVEL_03 # image and video datasets and models for torch deep learning
 pytorch-ranger==0.1.1 # LEVEL_03 # Ranger - a synergistic optimizer using RAdam (Rectified Adam) and LookAhead in one codebase
 torchmetrics==0.6.0 # LEVEL_03 # PyTorch native Metrics
+nystrom-attention==0.0.11 # LEVEL_03 # Nystrom Attention - Pytorch
 torch==1.10.0 # LEVEL_02 # Tensors and Dynamic neural networks in Python with strong GPU acceleration
+einops==0.3.2 # LEVEL_01 # A new flavour of deep learning operations
 #
 Theano==1.0.5 # LEVEL_03 # Optimizing compiler for evaluating mathematical expressions on CPUs and GPUs
 nose==1.3.7 # LEVEL_01 # nose extends unittest to make testing easier
@@ -177,6 +179,8 @@ gensim==4.1.2 # LEVEL_03 # Python framework for fast Vector Space Modelling
 #
 openai==0.11.0 # LEVEL_04 # Python client library for the OpenAI API
 pandas-stubs==1.2.0.37 # LEVEL_01 # needed by openai # Type annotations for Pandas
+#
+wandb==0.12.6 # LEVEL_04 # A CLI and library for interacting with the Weights and Biases API
 #
 #ktrain>=0.27.2
 #
@@ -210,6 +214,7 @@ spacy==3.2.0 # LEVEL_04 # Industrial-strength Natural Language Processing (NLP) 
 spacy-loggers==1.0.1 # LEVEL_02 # Logging utilities for SpaCy
 spacy-legacy==3.0.8 # LEVEL_01 # Legacy registered functions for spaCy backwards compatibility
 # spacy-transformers  # downgrades transformers !!
+thinc==8.0.13 # LEVEL_03 # A refreshing functional take on deep learning, compatible with your favorite libraries
 #
 transformers==4.12.3 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
 #
@@ -343,7 +348,17 @@ dash-renderer==1.9.1 # LEVEL_01 # Front-end component renderer for Dash
 chart-studio==1.1.0 # LEVEL_04 # Utilities for interfacing with plotly's Chart Studio
 plotly==5.3.1 # LEVEL_03 # An open-source, interactive data visualization library for Python
 #
-
+#
+# Color & Terminal
+spectra==0.0.11 # LEVEL_03 # old # Color scales and color conversion made easy for Python
+colorcet==2.0.6 # LEVEL_03 # Collection of perceptually uniform colormaps
+colormath==3.0.0 # LEVEL_02 # not maintained # Color math and conversion library
+blessings==1.7 # LEVEL_02 # old # A thin, practical wrapper around terminal coloring, styling, and positioning
+rich==10.13.0 # LEVEL_02 # best !! # Render rich text, tables, progress bars, syntax highlighting, markdown and more to the terminal
+colorama==0.4.4 # LEVEL_01 # Cross-platform colored terminal text
+termcolor==1.1.0 # LEVEL_01 # OLD !! # ANSII Color formatting for output in terminal
+colorful==0.5.4 # LEVEL_01 # old # Terminal string styling done right, in Python
+#
 #
 # Google ..
 #
@@ -450,7 +465,6 @@ beautifulsoup4==4.10.0 # LEVEL_02 # Screen-scraping library
 soupsieve==2.3.1 # LEVEL_01 # A modern CSS selector implementation for Beautiful Soup
 libclang==12.0.0 # LEVEL_01 # Clang Python Bindings, mirrored from the official LLVM repo: https://github.com/llvm/llvm-project/tree/main/clang/bindings/python, to make the installation process easier
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?) # A thread-safe disk based persistent queue in Python
-colorama==0.4.4 # LEVEL_01 # Cross-platform colored terminal text
 filelock==3.3.2 # LEVEL_01 # A platform independent file lock
 #
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
@@ -626,7 +640,6 @@ requests-oauthlib==1.3.0 # LEVEL_03 # OAuthlib authentication support for Reques
 requests-toolbelt==0.9.1 # LEVEL_03 # A utility belt for advanced users of python-requests
 requests-unixsocket==0.2.0 # LEVEL_03 # Use requests to talk HTTP via a UNIX domain socket
 retrying==1.3.3 # LEVEL_02 # Retrying
-rich==10.13.0 # LEVEL_02 # Render rich text, tables, progress bars, syntax highlighting, markdown and more to the terminal
 rsa==4.7.2 # LEVEL_02 # Pure-Python RSA implementation
 sacrebleu==2.0.0 # LEVEL_02 # Hassle-free computation of shareable, comparable, and reproducible BLEU, chrF, and TER scores
 sacremoses==0.0.46 # LEVEL_02 # SacreMoses
@@ -643,11 +656,9 @@ stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-
 stumpy==1.9.2 # LEVEL_03 # A powerful and scalable library that can be used for a variety of time series data mining tasks
 tabulate==0.8.9 # LEVEL_01 # Pretty-print tabular data
 tblib==1.7.0 # LEVEL_01 # Traceback serialization library
-termcolor==1.1.0 # LEVEL_01 # ANSII Color formatting for output in terminal
 terminado==0.12.1 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
 testpath==0.5.0 # LEVEL_01 # Test utilities for code working with files and commands
 text-unidecode==1.3 # LEVEL_01 # The most basic Text::Unidecode port
-thinc==8.0.13 # LEVEL_03 # A refreshing functional take on deep learning, compatible with your favorite libraries
 threadpoolctl==3.0.0 # LEVEL_01 # threadpoolctl
 toml==0.10.2 # LEVEL_01 # Python Library for Tom's Obvious, Minimal Language
 tomlkit==0.7.2 # LEVEL_01 # Style preserving TOML library
@@ -666,7 +677,7 @@ url-normalize==1.4.3 # LEVEL_02 # URL normalization for Python
 wasabi==0.8.2 # LEVEL_01 # A lightweight console printing and formatting toolkit
 wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a terminal
 webencodings==0.5.1 # LEVEL_01 # Character encoding aliases for legacy web content
-websockets==10.0 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
+websockets==10.1 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
 websocket-client==1.2.1 # LEVEL_01 # WebSocket client for Python with low level API options
 Werkzeug==2.0.2 # LEVEL_01 # The comprehensive WSGI web application library
 wireless==0.3.3 # LEVEL_01 # A dead simple, cross-platform Python library to connect to wireless networks
@@ -674,6 +685,14 @@ xxhash==2.0.2 # LEVEL_01 # Python binding for xxHash
 yarl==1.7.2 # LEVEL_02 # Yet another URL library
 zict==2.0.0 # LEVEL_02 # Mutable mapping tools
 zipp==3.6.0 # LEVEL_01 # Backport of pathlib-compatible object wrapper for zip files
+#
+#
+# SQL
+#
+SQLAlchemy== 1.4.27 # LEVEL_02 # Database Abstraction Library
+PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
+sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser
+psycopg2-binary==2.9.2 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapter
 
 #
 #
@@ -686,8 +705,6 @@ tinycss2==1.1.0 # LEVEL_02 # tinycss2
 xarray==0.20.1 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.0.2 # LEVEL_01 # ZSTD Bindings for Python
 #
-spectra==0.0.11 # LEVEL_03 # Color scales and color conversion made easy for Python
-colormath==3.0.0 # LEVEL_02 # Color math and conversion library
 alabaster==0.7.12 # LEVEL_01 # A configurable sidebar-enabled Sphinx theme
 async-generator==1.10 # LEVEL_01 # Async generators and context managers for Python 3.5+
 greenlet==1.1.2 # LEVEL_01 # Lightweight in-process concurrent programming
@@ -696,7 +713,6 @@ mock==4.0.3 # LEVEL_01 # Rolling backport of unittest.mock for all Pythons
 outcome==1.1.0 # LEVEL_02 # Capture the outcome of Python function calls
 pluggy==1.0.0 # LEVEL_01 # plugin and hook calling mechanisms for python
 py==1.11.0 # LEVEL_01 # library with cross-python path, ini-parsing, io, code, log facilities
-psycopg2-binary==2.9.2 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapter
 pyOpenSSL==21.0.0 # LEVEL_04 # Python wrapper module around the OpenSSL library
 redis==3.5.3 # LEVEL_01 # Python client for Redis key-value store
 snowballstemmer==2.1.0 # LEVEL_01 # This package provides 29 stemmers for 28 languages generated from Snowball algorithms
@@ -714,7 +730,6 @@ gitdb==4.0.9 # LEVEL_02 # Git Object Database
 #
 #
 jqdatasdk==1.8.10 # LEVEL_04 # jqdatasdk<easy utility for getting financial market data of China>
-SQLAlchemy== 1.4.27 # LEVEL_02 # Database Abstraction Library
 thriftpy2==0.4.14 # LEVEL_02 # Pure python implementation of Apache Thrift
 ply==3.11 # LEVEL_01 # Python Lex & Yacc
 #
@@ -723,9 +738,7 @@ altair==4.1.0 # LEVEL_04 # Altair: A declarative statistical visualization libra
 astor==0.8.1 # LEVEL_01 # Read/rewrite/write Python ASTs
 atari-py==0.2.9 # LEVEL_02 # Python bindings to Atari games
 base58==2.1.1 # LEVEL_01 # Base58 and Base58Check implementation
-blessings==1.7 # LEVEL_02 # A thin, practical wrapper around terminal coloring, styling, and positioning
 blinker==1.4 # LEVEL_01 # Fast, simple object-to-object and broadcast signaling
-colorful==0.5.4 # LEVEL_01 # Terminal string styling done right, in Python
 gpustat==0.6.0 # LEVEL_03 # An utility to monitor NVIDIA GPU status and usage
 hiredis==2.0.0 # LEVEL_01 # Python wrapper for hiredis
 nvidia-ml-py3==7.352.0 # LEVEL_01 # Python Bindings for the NVIDIA Management Library
@@ -733,7 +746,6 @@ opencensus==0.8.0 # LEVEL_05 # A stats collection and distributed tracing framew
 opencensus-context==0.1.2 # LEVEL_01 # OpenCensus Runtime Context
 py-spy==0.3.11 # LEVEL_01 # Sampling profiler for Python programs
 pydeck==0.7.1 # LEVEL_09 # Widget for deck.gl maps
-PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
 cattrs==1.8.0 # LEVEL_02 # Composable complex class support for attrs and dataclasses
 #
 biopython==1.79 # LEVEL_02 # Freely available tools for computational molecular biology
@@ -746,7 +758,6 @@ brotlipy==0.7.0 # LEVEL_03 # Python binding to the Brotli library
 click-plugins==1.1.1 # LEVEL_02 # An extension module for click to enable registering CLI commands via setuptools entry-points
 cligj==0.7.2 # LEVEL_02 # Click params for commmand line interfaces to GeoJSON
 #
-colorcet==2.0.6 # LEVEL_03 # Collection of perceptually uniform colormaps
 param==1.12.0 # LEVEL_01 # Make your Python code clearer and more reliable by declaring Parameters
 pyct==0.4.8 # LEVEL_02 # Python package common tasks for users (e.g. copy examples, fetch data, ...)
 #
@@ -822,17 +833,11 @@ zope_deprecation==4.4.0 # LEVEL_02 # Zope Deprecation Infrastructure
 zope_interface==5.4.0 # LEVEL_02 # Interfaces for Python
 #
 nodejs==0.1.1 # LEVEL_02 # Python bindings and utils for Node.js and io.js
-#
 olefile==0.46 # LEVEL_01 # Python package to parse, read and write Microsoft OLE2 files (Structured Storage or Compound Document, Microsoft Office)
-#
 pyviz-comms==2.1.0 # LEVEL_02 # Bidirectional communication for the HoloViz ecosystem
-#
 proj==0.2.0 # LEVEL_04 # A command-line manager for archiving and retrieving projects
-#
 pyee==8.2.2 # LEVEL_01 # A port of node.js's EventEmitter to python
-#
 rouge-score==0.0.4 # LEVEL_03 # Pure python implementation of ROUGE-1.5.5
-#
 pynvml==11.0.0 # LEVEL_01 # Python Bindings for the NVIDIA Management Library
 #
 numcodecs==0.9.1 # LEVEL_02 # A Python package providing buffer compression and transformation codecs for use in data storage and communication applications
@@ -855,23 +860,17 @@ pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
 ruamel_yaml==0.17.17 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
 ruamel_yaml_clib==0.2.6 # LEVEL_01 # C version of reader, parser and emitter for ruamel.yaml derived from libyaml
 #
-sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser
-#
 aiosignal==1.2.0 # LEVEL_02 # aiosignal: a list of registered asynchronous callbacks
 frozenlist==1.2.0 # LEVEL_01 # A list-like structure which implements collections.abc.MutableSequence
 #
-#
-wandb==0.12.6 # LEVEL_04 # A CLI and library for interacting with the Weights and Biases API
 axial-positional-embedding==0.2.1 # LEVEL_03 # Axial Positional Embedding
 local-attention==1.4.3 # LEVEL_03 # Local windowed attention, for language modeling
-nystrom-attention==0.0.11 # LEVEL_03 # Nystrom Attention - Pytorch
 netCDF4==1.5.8 # LEVEL_03 # Provides an object-oriented python interface to the netCDF version 4 library
 cftime==1.5.1.1 # LEVEL_02 # Time-handling functionality from netcdf4-python
 omegaconf==2.1.1 # LEVEL_02 # A flexible configuration library
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
 sentry-sdk==1.4.3 # LEVEL_02 # Python client for Sentry (https://sentry.io)
 yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
-einops==0.3.2 # LEVEL_01 # A new flavour of deep learning operations
 configparser==5.1.0 # LEVEL_01 # Updated configparser from Python 3.8 for Python 2.6+
 pathtools==0.1.2 # LEVEL_01 # File system general utilities
 shortuuid==1.0.8 # LEVEL_01 # A generator library for concise, unambiguous and URL-safe UUIDs
