--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -199,6 +199,8 @@ holidays==0.11.3.1 # LEVEL_03 # for prophet # Generate and work with holidays in
 #
 # NLP
 #
+stanza==1.3.0 # LEVEL_03 # A Python NLP Library for Many Human Languages, by the Stanford NLP Group
+#
 nltk==3.6.5 # LEVEL_02 # Natural Language Toolkit
 #
 Babel==2.9.1 # LEVEL_02 # Internationalization utilities
@@ -503,7 +505,7 @@ pyanalyze==0.3.1 # LEVEL_04 # A static analyzer for Python
 pycocotools==2.0.2 # LEVEL_04 # Official APIs for the MS-COCO dataset
 #
 aenum==3.1.5 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
-aiohttp==3.8.0 # LEVEL_03 # Async http client/server framework (asyncio)
+aiohttp==3.8.1 # LEVEL_03 # Async http client/server framework (asyncio)
 async-timeout==4.0.1 # LEVEL_02 # Timeout context manager for asyncio programs
 aioredis==2.0.0 # 1.3.1 # LEVEL_03 # asyncio (PEP 3156) Redis support
 altgraph==0.17.2 # LEVEL_01 # Python graph (network) package
@@ -881,3 +883,5 @@ livereload==2.6.3 # LEVEL_02 # Python LiveReload is an awesome tool for web deve
 #
 langcodes==3.3.0 # LEVEL_01 # Tools for labeling human languages with IETF language tags
 kiwisolver==1.3.2 # LEVEL_01 # A fast implementation of the Cassowary constraint solver
+#
+emoji==1.6.1 # LEVEL_01 # Emoji for Python
