--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -885,3 +885,5 @@ langcodes==3.3.0 # LEVEL_01 # Tools for labeling human languages with IETF langu
 kiwisolver==1.3.2 # LEVEL_01 # A fast implementation of the Cassowary constraint solver
 #
 emoji==1.6.1 # LEVEL_01 # Emoji for Python
+#
+shellingham==1.4.0 # LEVEL_01 # Tool to Detect Surrounding Shell
