--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -94,7 +94,7 @@ httpcore==0.13.7 # LEVEL_03 # LOCKED # A minimal low-level HTTP client
 #
 # Generic Low Level Tools
 #
-httpx==0.20.0 # LEVEL_04 # The next generation HTTP client
+httpx==0.21.0 # LEVEL_04 # The next generation HTTP client
 seaborn==0.11.2 # LEVEL_04 # seaborn: statistical data visualization
 pandas-datareader==0.10.0 # LEVEL_04 # Data readers extracted from the pandas codebase,should be compatible with recent pandas versions
 pandas==1.3.4 # LEVEL_03 # Powerful data structures for data analysis, time series, and statistics
@@ -125,11 +125,11 @@ GPUtil==1.4.0 # LEVEL_01 # GPUtil is a Python module for getting the GPU status 
 #
 # Machine Learning
 #
-tensorflow-text==2.6.0 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
-tensorflow==2.6.2 # LEVEL_06 # TensorFlow is an open source machine learning framework for everyone
-tensorboard==2.6.0 # LEVEL_05 # TensorBoard lets you watch Tensors Flow
-tensorflow-estimator==2.6.0 # LEVEL_01 # TensorFlow Estimator
-keras==2.6.0 # LEVEL_01 # TensorFlow Keras
+tensorflow-text==2.7.0 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
+tensorflow==2.7.0 # LEVEL_06 # TensorFlow is an open source machine learning framework for everyone
+tensorboard==2.7.0 # LEVEL_05 # TensorBoard lets you watch Tensors Flow
+tensorflow-estimator==2.7.0 # LEVEL_01 # TensorFlow Estimator
+keras==2.7.0 # LEVEL_01 # Deep learning for humans
 #
 tensorboard-data-server==0.6.1 # LEVEL_01 # Fast data loading for TensorBoard
 tensorboard-plugin-wit==1.8.0 # LEVEL_01 # What-If Tool TensorBoard plugin
@@ -705,7 +705,7 @@ psycopg2-binary==2.9.2 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapte
 #
 #streamlit # has some dependencies !!
 tbb==2021.4.0 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
-tiledb==0.10.5 # LEVEL_02 # Pythonic interface to the TileDB array storage manager
+tiledb==0.11.0 # LEVEL_02 # Pythonic interface to the TileDB array storage manager
 tinycss2==1.1.0 # LEVEL_02 # tinycss2
 xarray==0.20.1 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.0.2 # LEVEL_01 # ZSTD Bindings for Python
